<resources>
    <string name="app_name">W5D2-Animations</string>
    <string name="go_to_transitionsactivity2_with">Go to TransitionsActivity2 with:</string>
    <string name="example">Example</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="bounce">Bounce</string>
    <string name="rotate">Rotate</string>
    <string name="go_to_transitionsactivity1_with">Go to TransitionsActivity1 with:</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="slide_down">Slide Down</string>
    <string name="slide_up">Slide Up</string>
    <string name="slide_from_left">Slide From Left</string>
    <string name="slide_from_right">Slide From Right</string>
</resources>